Fixed a few component alignment issues.

--- a/src/styles/css/Home.css
+++ b/src/styles/css/Home.css
@@ -20,23 +20,6 @@
   top: 50%;
   left: 50%; }
 
-.hero-text {
-  font-weight: 400; }
-
-.hero-contact-info {
-  font-weight: 600;
-  margin-left: 4px; }
-
-.hero-contact-info-container {
-  margin-right: 20px; }
-
-/* todo: remove this using theme-color in creativ tim's scss */
-a.hero-contact-info-container:hover,
-a.hero-contact-info-container:visited,
-a.hero-contact-info-container:active,
-a.hero-contact-info-container:link {
-  color: white !important; }
-
 a:hover, a:visited, a:active, a:link {
   color: #3C4858; }
 
